<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_url_label"
        android:text="@string/tv_url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_url"/>
    <EditText
        android:id="@+id/et_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/et_url_default_value"
        app:layout_constraintStart_toEndOf="@id/tv_url_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/btn_get_file_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_file_info_label"
        app:layout_constraintTop_toBottomOf="@id/et_url"/>
    <TextView
        android:id="@+id/tv_file_size_label"
        android:text="@string/tv_file_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_file_size"/>
    <EditText
        android:id="@+id/et_file_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_file_size_label"
        app:layout_constraintTop_toBottomOf="@id/btn_get_file_info"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_file_type_label"
        android:text="@string/tv_file_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_file_type"/>
    <EditText
        android:id="@+id/et_file_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_file_type_label"
        app:layout_constraintTop_toBottomOf="@id/et_file_size"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_get_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_file_label"
        app:layout_constraintTop_toBottomOf="@id/et_file_type"/>
    <TextView
        android:id="@+id/tv_downloaded_bytes_label"
        android:text="@string/tv_downloaded_bytes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_downloaded_bytes"/>
    <EditText
        android:id="@+id/et_downloaded_bytes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_downloaded_bytes_label"
        app:layout_constraintTop_toBottomOf="@id/btn_get_file"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_downloaded_bytes"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>